[package]
name = "wasm-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
wasmtime = "13.0.0"
wasmtime-wasi = "13.0.0"
anyhow="1.0.75"
base64="0.21.4"